links: limited relative links support (#1104)